# langchain-sql-qa

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/agents/: sql_agent.py
app/api/v1/: endpoints.py  schemas.py
app/chains/: sql_chain.py
app/chains/models/: __init__.py  query.py  state.py
app/core/: config.py  exceptions.py  logging_config.py
app/services/: database.py
tests/: conftest.py  test_chain_approval_api.py  test_chain_basic_api.py  test_chain_error_handling.py  test_chain_integration.py  test_chain_performance.py  test_chain_streaming_api.py
